--- a/IndexFront.html
+++ b/IndexFront.html
@@ -17,7 +17,7 @@
   <body>
     <h1>Amazon</h1>
     <div class="container">
-      <div class="row">
+      <div id="box1" class="row">
 
 
          <!--           
